--- a/ClickOnce.RuntimeVersion.csproj
+++ b/ClickOnce.RuntimeVersion.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Company>David Partington</Company>
-    <Description>Decode the ClickOnce runtime version from the Package Manifest.  Only for  Dotnet 5 or 6 </Description>
+    <Description>Decode the ClickOnce runtime version from the Package Manifest.  Only for  DotNet 5 or 6 </Description>
     <Copyright>David Partington</Copyright>
     <Authors>David Partington</Authors>
     <RepositoryType>git</RepositoryType>
@@ -14,6 +14,7 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <PackageProjectUrl>https://github.com/DavidPartington/ClickOnce.RuntimeVersion</PackageProjectUrl>
     <RepositoryUrl>https://github.com/DavidPartington/ClickOnce.RuntimeVersion</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
 </Project>
